@@ -52,6 +52,7 @@ public class ExportPdvb4AwbPlugin {
      */
     private final boolean german = Locale.getDefault().getCountry() == Locale.GERMAN.getCountry();
 
+    @SuppressWarnings("serial")
     public Action getAction() {
         return new AbstractAction(german ? "CSV-Export Anwendungssysteme -> Phys. Datenverabeitungsbausteine" : "CSV Export Application Systems -> Phys. Data Processing Components") {
 
@@ -127,7 +128,7 @@ public class ExportPdvb4AwbPlugin {
             entryBuilder.append("\t");
             entryBuilder.append(getParseSaveString(pdvbList.size() > 0 ? pdvbList.get(0).getClearName() : "", true));
             entryBuilder.append("\t");
-            entryBuilder.append(getParseSaveString(new Integer(pdvbList.size()).toString()));
+            entryBuilder.append(getParseSaveString(Integer.valueOf(pdvbList.size()).toString()));
             entryBuilder.append("\t");
             appendNewLine(entryBuilder);
             if (pdvbList.size() > 0) {
